# polymarket-btc

./: .env.example  .gitignore  Cargo.toml  README.md  TUI.md  arb_windows.csv  package-lock.json  package.json  polymarket-arb-bot-prd.md
.sqlx/: query-10e40ca0f5e9e9c9a2297364bd5fbcdc44b8a3801f4575577d94fef9c69aceeb.json  query-36cf6e95e237aaf07cf8378dbf855b66dc31aee38a99a1a1bf526d45aa42d0e8.json  query-36ddd768e230203ea6880b9c05f1564838dac6f466f6def10418240d3f703f83.json  query-3b079697967c8fac7054d4f7b340890011ce285d01c6fd596860b767d00ca9a1.json  query-3cf2c34ec97b9f89b703ffcc90feee130216bac640a2e2caf76d593431837f79.json  query-4f99554dedbae085f135554c65626a40ac1a65ecb039ab207ba5dfd94f192671.json  query-537405942d559c7c55511b447ba8527db814eb783121c5a530a4bc28a4537595.json  query-5be294c894c62b4afe4c3653fa23a8a61efe86eb33af5c8742e106b6d4fa067c.json  query-692dd41a831018b7a11f822119c6394aeb82bdacbb16ae7f44fe43016c914c25.json  query-81784b1e06548f6d628ff7803f003a7507f88bf7d9ecc13baa32063b9788b9c7.json  query-832b938eb9ba09875982535006c6d36aa2185d9a7bf2a8bed7a6e8f9bc48b622.json  query-8fbc957019e848b4f0b21aa6cec2938ac55c3d43f0ff481f97d700d2c05d8c4b.json  query-9a252e14d3a568352da4d490a1411185ac3c6b0a66080709504e654a6ab483f2.json  query-a64456d940c473027a96e03dfec9e044cd55fdae1cb2c40cfe833d89a41d5721.json  query-a89270c4ce26017409d18f2c0bbb70f4b22aba1622fdd54d45df91c088d0ff8e.json  query-ae9f73d2590a1fbc831e8dc5ef6f3a5493f05efe58aec03af928219be4f20978.json  query-bd00ab1f969e209330f9359a6410fffe457c17e229581aa55e1cd9e6064aafee.json  (+5 more)
docs/: IMPROVEMENTS.md
src/: config.rs  (+12 more)
(+20 files in other folders)
